--- a/Self password creation.ipynb
+++ b/Self password creation.ipynb
@@ -11,28 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5a19084f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your name here : Piyush mokadam\n",
-      "Enter Your date of birth here :02\\01]1983\n",
-      "Piyush mokadam\n",
-      "02\\01]1983\n",
-      "The password created is :  Piy_mad_1983\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Name=input(\"Enter your name here : \")\n",
     "DOB=input(\"Enter Your date of birth here :\")\n",
+    "AGE=input(\"Enter your age here : \")\n",
     "print(Name)\n",
     "print(DOB)\n",
-    "print(\"The password created is : \",Name[0:3]+'_'+Name[-1:-4:-1]+'_'+DOB[-4:])"
+    "print(AGE)\n",
+    "print(\"The password created is : \",Name[0:3]+'_'+Name[-1:-4:-1]+'_'+DOB[-4:]+AGE[::-1])"
    ]
   },
   {
