The age variable has been removed

--- a/Self password creation.ipynb
+++ b/Self password creation.ipynb
@@ -18,11 +18,9 @@
    "source": [
     "Name=input(\"Enter your name here : \")\n",
     "DOB=input(\"Enter Your date of birth here :\")\n",
-    "AGE=input(\"Enter your age here : \")\n",
     "print(Name)\n",
     "print(DOB)\n",
-    "print(AGE)\n",
-    "print(\"The password created is : \",Name[0:3]+'_'+Name[-1:-4:-1]+'_'+DOB[-4:]+AGE[::-1])"
+    "print(\"The password created is : \",Name[0:3]+'_'+Name[-1:-4:-1]+'_'+DOB[-4:])"
    ]
   },
   {
